@@ -1,9 +1,10 @@
 package com.ultreon.craft.client.gui.screens;
 
 import com.ultreon.craft.client.gui.*;
-import com.ultreon.craft.client.gui.widget.Button;
 import com.ultreon.craft.client.gui.widget.Label;
 import com.ultreon.craft.client.gui.widget.SelectionList;
+import com.ultreon.craft.client.gui.widget.TextButton;
+import com.ultreon.craft.client.text.UITranslations;
 import com.ultreon.craft.text.TextObject;
 import com.ultreon.libs.translations.v1.LanguageManager;
 
@@ -13,7 +14,7 @@ import java.util.stream.Collectors;
 
 public class LanguageScreen extends Screen {
     private Label titleLabel;
-    private Button<?> backButton;
+    private TextButton backButton;
     private SelectionList<Locale> list;
 
     public LanguageScreen() {
@@ -24,25 +25,30 @@ public class LanguageScreen extends Screen {
     public void build(GuiBuilder builder) {
         List<Locale> locales = LanguageManager.INSTANCE.getLocales().stream().sorted((a, b) -> a.getDisplayLanguage().compareToIgnoreCase(b.getDisplayLanguage())).collect(Collectors.toList());
 
-        this.titleLabel = builder.label(Alignment.CENTER, () -> new Position(this.size.width / 2, 15))
-                .text(this.title)
-                .scale(2);
-        this.list = builder.<Locale>selectionList(21, () -> new Bounds(this.size.width / 2 - 200, 50, 400, this.size.height - 90))
+        this.titleLabel = builder.add(Label.of(this.title)
+                .alignment(Alignment.CENTER)
+                .position(() -> new Position(this.size.width / 2, 15))
+                .scale(2));
+
+        this.list = builder.add(new SelectionList<Locale>(21).bounds(() -> new Bounds(this.size.width / 2 - 200, 50, 400, this.size.height - 90)))
                 .selectable(true)
-                .itemRenderer(this::renderItem)
                 .entries(locales)
-                .onSelected(locale -> {
+                .itemRenderer(this::renderItem)
+                .callback(locale -> {
                     this.client.settings.language.set(locale);
                     this.client.settings.save();
                 });
-        this.backButton = builder.button(() -> new Position(this.size.width / 2 - 100, this.size.height - 30), caller -> this.back())
-                .translation("ultracraft.ui.back");
+
+        this.backButton = builder.add(TextButton.of(UITranslations.BACK)
+                .position(() -> new Position(this.size.width / 2 - 100, this.size.height - 30))
+                .callback(caller -> this.back()));
     }
 
     private void renderItem(Renderer renderer, Locale locale, int y, int mouseX, int mouseY, boolean selected, float deltaTime) {
-        String text = locale.getDisplayLanguage(new Locale("en")) + " (" + locale.getDisplayCountry(new Locale("en")) + ")";
+        String text = locale.getDisplayLanguage(Locale.of("en")) + " (" + locale.getDisplayCountry(Locale.of("en")) + ")";
         text += " - " + locale.getDisplayLanguage(locale) + " (" + locale.getDisplayCountry(locale) + ")";
-        renderer.drawTextCenter(text, this.list.getX() + this.list.getWidth() / 2f, y + 4f);
+
+        renderer.textCenter(text, this.list.getX() + this.list.getWidth() / 2f, y + 4f);
     }
 
     public Label getTitleLabel() {
@@ -53,7 +59,7 @@ public class LanguageScreen extends Screen {
         return this.list;
     }
 
-    public Button<?> getBackButton() {
+    public TextButton getBackButton() {
         return this.backButton;
     }
 }
